# BeliUA

./: BeliUA.cpp  CMakeLists.txt  README.md
Libraries/: exprtk.hpp
Menu/: doCommands.cpp  write.cpp
Scripts/: clear.cpp  indevelopment.cpp
Scripts/AutoClicker/: autoclicker.cpp
Scripts/AutoClicker/Settings/: AC_settings.cpp
Scripts/Calculator/: calculator.cpp
Scripts/TimeToUnixConverter/: converter.cpp
